--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio"><i class='fa fa-home'></i> Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services"><i class='fas fa-user-edit'></i> Register</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#Faq"><i class='fa fa-question-circle-o'></i> FAQ</a></li>
                     </ul>
                 </div>
             </div>
