updated review section and services

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#portfolio"><i class='fa fa-home'></i> Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services"><i class='fas fa-user-edit'></i> Register</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#Faq"><i class='fa fa-question-circle-o'></i> FAQ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="FAQ.html"><i class='fa fa-question-circle-o'></i> FAQ</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">How can you benefit from this website</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -64,7 +64,7 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Edit your CV</h4>
-                        <p class="text-muted">This editor will ensure that our document is professional and error free and highlight your skills and experience.</p>
+                        <p class="text-muted">Customize your CV as much you want any number of times for free.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -232,17 +232,21 @@
                                 <h4>15 December 2015</h4>
                                 <h2 class="subheading"> Fiona Volpe</h2>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Resume Buddy is what will make you stand out in less than a 
+                                month and a half,I got conracted by six employers and went in for 3 interviews. They have all commented
+                                on how my resume caught their eye, and how visually pleasant it is.It has made my life so much better.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>July 2020</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
+                                <h4>7 July 2020</h4>
+                                <h2 class="subheading"> Vesper Lynd</h2>
+                                <h4 class="subheading"></h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Undoubtedly, Resume Buddy was a great success for me.
+                                Within 15 minutes, I had created my resume and sent it with the email.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
